Fixed an issue where on very narrow screen sizes the text was not centered

--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ header a:hover {
 
   header {
     flex-direction: column;
+    padding: 20px 20px;
   }
 
   header a {
@@ -196,7 +197,9 @@ header a:hover {
   .hero-banner {
     flex-direction: column;
     justify-content: space-around;
-    padding: 10px 10px;
+    align-items: center;
+    text-align: center;
+    padding: 10px 2px;
   }
 
   .hero-banner img {
